--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "era-picker",
-  "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "version": "1.0.17",
+  "main": "src/components/EraPicker.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
-  },
-  "private": true
+  }
 }
